# Lim-Chun-iok_2008_Tai-jip-Tua-su-tian

./: SPEC.md  pyproject.toml
tailo_cli/: README.md  __init__.py  __main__.py  converter.py  dict_loader.py  ipa.py  opencc_util.py  romanize.py
tests/: test_tailo_cli.py
